# python-kata-solutions

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: agile_workflow.md  api_reference.md  definition_of_done.md  engX.md  user_stories.md
src/config/: logging.yaml
src/kata_solutions/: __init__.py
src/kata_solutions/dictionary/: __init__.py  dictionary.py
src/kata_solutions/nth_letter/: __init__.py  nth_letter.py
src/kata_solutions/shopping/: __init__.py  shopping.py
src/scripts/: run_all.py
tests/: conftest.py  test_dictionary.py  test_nth_letter.py  test_shopping.py
