[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ─── Project Metadata ─────────────────────────────────────────────────────────
[project]
name = "python-kata-solutions"
version = "1.0.0"
description = "Enterprise-grade Python kata solutions following EPAM engX standards"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Engineering Team", email = "engineering@example.com" }
]
keywords = ["kata", "python", "algorithms", "clean-code", "engx"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/your-org/python-kata-solutions"
Documentation = "https://github.com/your-org/python-kata-solutions/tree/main/docs"
Repository = "https://github.com/your-org/python-kata-solutions"
"Bug Tracker" = "https://github.com/your-org/python-kata-solutions/issues"

# ─── Tool Configuration ───────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "unit: pure unit tests with no external dependencies",
    "integration: tests that cross module boundaries",
    "edge_case: boundary and edge case validation",
    "error_handling: tests for exception paths",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

[tool.black]
line-length = 99
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | dist
  | build
)/
'''

[tool.isort]
profile = "black"
line_length = 99
known_first_party = ["kata_solutions"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.flake8]
max-line-length = 99
extend-ignore = ["E203", "W503"]
exclude = [".venv", "build", "dist"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Allow assert in test files
